Minor bug fixes found with findbugs.